Fix issue : gpg: signing failed: Inappropriate ioctl for device after adding the following arg --pinentry-mode loopback

--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,8 @@
                         <arg>--batch</arg>
                         <arg>--passphrase-fd</arg>
                         <arg>0</arg>
+                        <arg>--pinentry-mode</arg>
+                        <arg>loopback</arg>
                     </gpgArguments>
                 </configuration>
             </plugin>
