--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- Debug -->
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>1.6</version>
+        </dependency>
+
         <!-- Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -62,9 +69,6 @@
                     <useAgent>true</useAgent>
                     <passphrase>${env.GPG_PASSPHRASE}</passphrase>
                     <gpgArguments>
-                        <arg>--batch</arg>
-                        <arg>--passphrase-fd</arg>
-                        <arg>0</arg>
                         <arg>--pinentry-mode</arg>
                         <arg>loopback</arg>
                     </gpgArguments>
