Add batch passphrase-fd as they are not added by gpg plugin 3.0.1-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,9 @@
                     <gpgArguments>
                         <arg>--pinentry-mode</arg>
                         <arg>loopback</arg>
+                        <arg>--batch</arg>
+                        <arg>--passphrase-fd</arg>
+                        <arg>0</arg>
                     </gpgArguments>
                 </configuration>
             </plugin>
