--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <properties>
         <spring-boot.version>2.3.8.RELEASE</spring-boot.version>
         <java.version>11</java.version>
+        <gpg-plugin.maven>1.6</gpg-plugin.maven>
     </properties>
 
     <dependencies>
@@ -30,7 +31,7 @@
         <dependency>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-            <version>3.0.1-SNAPSHOT</version>
+            <version>${gpg-plugin.maven}</version>
         </dependency>
 
         <!-- Test -->
@@ -53,7 +54,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-gpg-plugin</artifactId>
-                    <version>3.0.1-SNAPSHOT</version>
+                    <version>${gpg-plugin.maven}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
