--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
                         <arg>--batch</arg>
                         <arg>--passphrase-fd</arg>
                         <arg>0</arg>
+                        <arg>--use-agent</arg>
                     </gpgArguments>
                 </configuration>
             </plugin>
